# shell-alias-analysis

./: .gitignore  README.md  Shell Alias Analysis.taskpaper  abstract.tex  autocorrect.tex  background.tex  bookmarks.tex  chaining.tex  complexity.tex  compression.tex  conclusion.tex  data.tex  default_arguments.tex  discussion.tex  file-name-distribution-table.tex  introduction.tex  paper.tex  references.bib  relatedwork.tex  results.tex  results_revised.tex  safety.tex  sampling.csv  shell-alias-analysis.tex  summary_stats.tex  table-top-two.tex  table-use-cases.tex  threats.tex  top-alias-commad-args.tex  top500.csv  usability.tex
notebooks/: autocorrect.ipynb  bookmarks.ipynb  coding.ipynb  coding.numbers  color.ipynb  commands_by_practice.ipynb  compression.ipynb  dataset.ipynb  environment.ipynb  longtail.csv  longtail.numbers  nicknaming.ipynb  overriding.ipynb  owners.ipynb  redefining.ipynb  renaming.ipynb  requirements.txt  sampling.ipynb  scrape_owners.py  scripts.ipynb  scripts_flow.ipynb  shortcuts.ipynb  subcommands.ipynb  substitutions.ipynb  sudo.ipynb  summary.ipynb  top50.csv  top50.numbers
paper/: abstract.tex  autocorrect.tex  background.tex  bookmarks.tex  chaining.tex  compression.tex  conclusion.tex  data.tex  discussion.tex  implications.tex  introduction.tex  references.bib  relatedwork.tex  results.tex  safety.tex  shell-alias-analysis-diff686be4fd9d5b51b5.tex  shell-alias-analysis-diff91c13fd18a8.tex  shell-alias-analysis.tex  threats.tex  (+10 more)
parser/: LICENSE  Main.hs  Parser.hs  README.md  SQL.hs  cabal.project.freeze  parser.cabal  test.txt
(+16 files in other folders)
