cabal-version:       >=1.10

name:                parser
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Michael Schröder
maintainer:          michael.schroeder@tuwien.ac.at
build-type:          Simple

executable parser
  main-is:             Main.hs
  other-modules:       Parser, SQL
  build-depends:
      base >=4.14 && <4.15
    , attoparsec
    , text
    , neat-interpolation
    , direct-sqlite
    , extra
  default-language:    Haskell2010
  ghc-options: -O2